<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_advert_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_advert_title_hint"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_advert_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_advert_cost_hint"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_advert_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_advert_description_hint"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_advert_add_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@color/app_green"
        android:text="@string/add_advert_add"
        android:textColor="@android:color/white"/>

</LinearLayout>